--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,6 +7,11 @@
 	<p>
 		<%= article.content %>
 	</p>
+	<p>
+		<%= link_to 'Show', article %> |
+		<%= link_to 'Edit', edit_article_path(article) %>  |
+		<%= link_to 'Delete', article, method: :delete %>
+	</p>
 	<hr>
 	<br>
 <% end %>
