--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,10 @@
   </head>
 
   <body>
-  	<p><%= link_to 'New', new_article_path %></p>
+  	<p>
+  		<%= link_to 'Main', articles_path %>  |
+	  	<%= link_to 'New', new_article_path %>
+		</p>
     <%= yield %>
   </body>
 </html>
