--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,15 +1,3 @@
 <h3>Edit article</h3>
 
-<%= form_for :article, url: article_path(@article), method: :put do |f| %>
-	<p>
-		<%= f.label :title %><br>
-		<%= f.text_field :content %>
-	</p>
-	<p>
-		<%= f.label :content %><br>
-		<%= f.text_area :content %>
-	</p>
-	<p>
-		<%= f.submit %>
-	</p>
-<% end %>
+<%= render 'form' %>
