--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,3 +7,9 @@
 <p>
 	<%= link_to 'Edit', edit_article_path %>
 </p>
+<h3>Comments:</h3>
+
+<h3>Create your comment:</h3>
+<%= form_for ([@article, @article.comments.build]) do |f| %>
+
+<% end %>
