--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,9 +7,34 @@
 <p>
 	<%= link_to 'Edit', edit_article_path %>
 </p>
+
+<hr>
+
 <h3>Comments:</h3>
+<% @article.comments.each do |comment| %>
+	<p>
+		<strong>Commenter:</strong>
+		<%= comment.commenter %>
+	</p>
+	<p>
+		<strong>Comment:</strong>
+		<%= comment.body %>
+	</p>
+<% end %>
+
+<hr>
 
 <h3>Create your comment:</h3>
 <%= form_for ([@article, @article.comments.build]) do |f| %>
-
+	<p>
+		<%= f.label :commenter %> <br>
+		<%= f.text_field :commenter %>
+	</p>
+	<p>
+		<%= f.label :body %> <br>
+		<%= f.text_area :body %>
+	</p>
+	<p>
+		<%= f.submit %>		
+	</p>
 <% end %>
